Fix image display on mobile product show page

--- a/app/assets/stylesheets/spree/frontend/products.sass
+++ b/app/assets/stylesheets/spree/frontend/products.sass
@@ -77,6 +77,6 @@ div
   #product-images
     text-align: center
   #product-show-cart-form
-    margin-top: 80px
+    margin-top: 100px
 #thumbnails
   margin-top: 30px
